src/test/deca/syntax/invalid/objet/NewLonely.deca
// mismatched input ';' expecting IDENT
// Description : new seul
// Resultat : erreur en ligne 7: new a besoin d'un membre


{
    new ;
}
